[PopulationMap-project][BE] <JDBC> 지역별_TOTAL_작업_20240906 (26)